--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ def lifeCycleVersion = '1.1.1'
 def roomVersion = '1.1.1'
 def butterKnifeVersion = '8.8.1'
 def daggerVersion = '2.15'
+def gsonVersion = "2.8.5"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -65,6 +66,7 @@ dependencies {
 
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.google.code.gson:gson:$gsonVersion"
 
     implementation "android.arch.persistence.room:runtime:$roomVersion"
     annotationProcessor "android.arch.persistence.room:compiler:$roomVersion"
