--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
+
+    compileOptions.incremental = false
 }
 
 def supportVersion = '28.0.0'
@@ -66,6 +72,8 @@ dependencies {
 
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+
     implementation "com.google.code.gson:gson:$gsonVersion"
 
     implementation "android.arch.persistence.room:runtime:$roomVersion"
